<resources>
    <!-- APP STUFF -->
    <string name="app_name">ExposureNotes</string>
    <string name="spinner_drop"> </string>

    <string name="DB_DELIMITER">♣</string>

    <!-- Main Menu -->
    <string name="app_settings">App Settings</string>
    <string name="camera_settings">Camera</string>
    <string name="lens_settings">Lenses</string>
    <string name="film_settings">Film</string>
    <string name="frame_settings">Frame</string>
    <string name="autocomplete_list_edit">Autocomplete List Edit</string>
    <string name="add_new_frame">Add New Frame</string>
    <string name="load_roll">Load Active Roll</string>

    <!-- Export Dialog -->
    <string name="export_filename">00 Film_name Camera_Name Date.json</string>
    <string name="export_method">Send To:</string>
    <string-array name="export_methods">
        <item>Local Storage</item>
        <item>DropBox</item>
        <item>Keybase</item>
        <item>Gmail</item>
        <item>Google Drive</item>
    </string-array>

    <string-array name="export_types">
        <item>JSON</item>
        <item>HTML</item>
        <item>Plain Text</item>
    </string-array>

    <string-array name="export_file_ext">
        <item>.json</item>
        <item>.html</item>
        <item>.txt</item>
    </string-array>

    <!-- Camera Settings -->
    <string name="camera_header">Camera:</string>
    <string name="camera_name">Camera Model</string>
    <string name="frames_header">Frames:</string>
    <string name="format_header">Format:</string>
    <string name="format_type">120mm</string>

    <!-- Lens Stuff -->
    <string name="lens_header">Lens Model:</string>
    <string name="lens_name">Lens Model</string>

    <!-- Formats -->
    <string name="format_35mm">35mm</string>
    <string name="format_120mm">120mm</string>
    <string name="format_other">Other</string>

    <!-- Film Info -->
    <string name="film_header">Film:</string>
    <string name="manu_header">Manufacturer:</string>
    <string name="make_header">Make:</string>
    <string name="model_header">Model:</string>
    <string name="focal_length_header">Focal Length:</string>
    <string name="item_header">Item:</string>
    <string name="iso_header">ISO:</string>
    <string name="dev_header">Exp:</string>
    <string name="film_size_header">Film Size:</string>
    <string name="film_size">120</string>
    <string name="film_manu">Manufacturer Name</string>
    <string name="film_name">Film Name</string>
    <string name="film_notes">Additional information</string>
    <string name="iso_value">100</string>
    <string name="dev_value">±0</string>


    <string name="clear_roll">Clear Film Roll</string>
    <string name="new_roll">New Film Roll</string>
    <string name="export_roll">Export Film Roll</string>

    <string-array name="isos">
        <item>0</item>
        <item>5</item>
        <item>12</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>125</item>
        <item>160</item>
        <item>200</item>
        <item>250</item>
        <item>320</item>
        <item>400</item>
        <item>500</item>
        <item>640</item>
        <item>800</item>
        <item>1000</item>
        <item>1250</item>
        <item>1600</item>
        <item>2000</item>
        <item>2500</item>
        <item>3200</item>
        <item>4000</item>
        <item>5000</item>
        <item>6400</item>
    </string-array>

    <string-array name="devs">
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>±0</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>

    <!-- Frame Notes -->
    <string name="frame_num_header">#</string>
    <string name="exp_count">##</string>
    <string name="shutter_header">Shutter:</string>
    <string name="aperture_header">Aperture:</string>
    <string name="notes_header">Notes:</string>
    <string name="notes_hint">dogs</string>
    <string name="shutter_hint">1/500</string>
    <string name="aperture_hint">f/3.5</string>
    <string name="frame_header">Exp\'s:</string>

    <!-- Button Text -->
    <string name="ok_button">OK</string>
    <string name="export_button">Export</string>
    <string name="cancel_button">Cancel</string>
    <string name="clear_button">Clear</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="close_button">Close</string>
    <string name="edit_button">Edit</string>
    <string name="update_button">Update</string>
    <string name="add_new">Add New</string>

    <string-array name="camera_formats">
        <item>Other</item>
        <item>35mm</item>
        <item>120mm</item>
        <item>4x5</item>
        <item>5x7</item>
        <item>8x10</item>
    </string-array>

    <string-array name="shutter_speeds">
        <item></item>
        <item>1/500s</item>
        <item>1/250s</item>
        <item>1/125s</item>
        <item>1/60s</item>
        <item>1/30s</item>
        <item>1/15s</item>
        <item>1/8s</item>
        <item>1/4s</item>
        <item>1/2s</item>
        <item>1s</item>
        <item>2s</item>
        <item>T</item>
        <item>B</item>
    </string-array>

    <string-array name="apertures">
        <item></item>
        <item>f/1.0</item>
        <item>f/1.2</item>
        <item>f/1.4</item>
        <item>f/1.8</item>
        <item>f/2.0</item>
        <item>f/2.8</item>
        <item>f/3.5</item>
        <item>f/4.0</item>
        <item>f/4.8</item>
        <item>f/5.6</item>
        <item>f/6.7</item>
        <item>f/8.0</item>
        <item>f/9.5</item>
        <item>f/11.0</item>
        <item>f/13.0</item>
        <item>f/16.0</item>
        <item>f/19.0</item>
        <item>f/22.0</item>
        <item>f/27.0</item>
        <item>f/32.0</item>
    </string-array>

    <string-array name="cameras">
        <item>Fuji GW690ii</item>
        <item>Bronica ETRsi</item>
        <item>Canon Ftb QL</item>
        <item>Mamiya Six Automat II</item>
    </string-array>

    <string-array name="lenses">
        <item>- other -</item>
        <item>Canon FD 23mm f/1.8</item>
        <item>Canon FD 50mm f/1.4</item>
        <item>Canon FD 50mm f/3.5 macro</item>
        <item>Canon FD 85mm f/1.8</item>
        <item>Canon FD 300mm f/4.0 L</item>
        <item>Mamiya K/L 90mm f/3.5</item>
        <item>Olympus D.Zuiko FC 75mm f/3.5</item>
    </string-array>

    <string name="frame_list_num_hint">1</string>
    <string name="spinner_text_example">Example</string>
    <string name="frame_notes_hint">Enter a brief description</string>
    <string name="frames_edit_hint">12</string>
    <string name="focal_length_hint">1000</string>
    <string name="focal_length_mm">mm</string>
    <string name="filename_header">Filename:</string>
    <string name="export_to">Export To:</string>
    <string name="export_as">Export As:</string>
    <string name="frame_dialog_title">Frame Settings</string>
    <string name="camera_dialog_title">Camera Settings</string>
    <string name="film_dialog_title">Film Settings</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="export_dialog_title">Film Roll Export</string>
    <string name="lens_dialog_title">Lens Settings</string>
    <string name="lens_selection">Lens Selection:</string>
    <string name="product_group_selection">Group:</string>
    <string name="camera_selection">Camera Selection:</string>
    <string name="film_selection">Film Selection:</string>
    <string name="lens_fixed_select">Lens (fixed):</string>
    <string name="fixed_lens">Fixed Lens:</string>
    <string name="frame_num_hint">000</string>
    <string name="setup_camera">\u0020Camera\u0020\u0020</string>
    <string name="setup_film_roll">Film Roll</string>
    <string name="frame_select">Frame Select:</string>
    <string name="application_settings">Application Settings</string>
    <string name="welcome_msg">Tap to get started:</string>
    <string name="script_button">Download Script</string>
    <string name="lens_model_text">000mm f/0.0</string>
    <string name="focal_length">Focal Length:</string>
    <string name="focal_hint">000</string>
    <string name="focal_units">mm</string>
    <string name="aperture">Aperture:</string>
    <string name="aperture_unit">f/</string>
    <string name="lens_model_hint">Model (ie: 50mm f/1.8 macro)</string>
    <string name="lens_inventory_button">Edit Lens Inventory</string>
    <string name="about_exposure_notes_header">About Exposure Notes</string>
    <string name="delete_button">Delete</string>
    <string name="info_text">Info Text</string>

    <!-- Help Text -->
    <string name="about_text">Set up both camera and film settings.\nTap a frame to add/edit exposure info.\nExport film roll and feed the json output to Exiftool (via a quick Python script, roll your own or download soon), making sure to match your scans.\n\nhttps://www.sno.phy.queensu.ca/~phil/exiftool/</string>
    <string name="lens_dialog_info">• Enter lens make and model to add new\n• Tap lens to edit.\n• Hold on lens to delete.</string>
    <string name="film_dialog_info">• Enter film make and model\n• Enter ISO and development compensation (push/pull) settings\n• Save to commit settings, cancel to discard</string>
    <string name="camera_dialog_info">• Enter camera make and model\n• Select camera format\n• Select default lens\n• Save to commit settings, cancel to discard</string>
    <string name="frame_dialog_info">• Set shutter speed and aperture\n• Select lens\n• Add a short description of the shot\n• Save to commit, clear to reset everything, cancel to discard</string>
    <string name="export_dialog_info">• Select file type\n• Select method of export\n• Edit filename or leave as default</string>
    <string name="autocomplete_dialog_info">• Select group of names you\'d like to edit\n• Tap to edit single entry• Hold on entry to delete</string>

    <!-- Alert Messages -->
    <string name="delete_alert_title">Delete This Entry?</string>
    <string name="lens_delete_msg">Note: Any frame that used this lens will be reset.</string>
    <string name="item_delete_msg">This entry will be removed from the autocomplete list.</string>
    <string name="file_exists_title">Filename Already Exists!</string>
    <string name="file_exists_msg">Over-write or cancel?</string>
    <string name="file_write_success_title">File Saved Successfully</string>

    <string-array name="autocomplete_groups">
        <item>Manufacturers</item>
        <item>Cameras</item>
        <item>Film</item>
        <item>Lenses</item>
    </string-array>

    <string-array name="camera_list">
        <item>Canon FTb QL</item>
        <item>Mamiya RB67sd</item>
        <item>Mamiya Six Automat II</item>
        <item>Fujifilm X-T1</item>
    </string-array>

    <string-array name="film_list">
        <item>Fuji Pro400H</item>
        <item>Kodak Portra 160</item>
        <item>Kodak Tri-X</item>
        <item>Ilford HP5+</item>
        <item>Ilford FP4+</item>
    </string-array>
</resources>
