<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_list_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".30"
        android:hint="@string/frame_list_num_hint"
        android:textSize="@dimen/list_item_font_size" />
    <TextView
        android:id="@+id/shutter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:hint="@string/shutter_hint"
        android:textSize="@dimen/list_item_font_size"/>
    <TextView
        android:id="@+id/aperture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:hint="@string/aperture_hint"
        android:textSize="@dimen/list_item_font_size"/>
    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:hint="@string/notes_hint"
        android:textSize="@dimen/list_item_font_size"/>

</TableRow>