<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/double_margin"
    android:gravity="center"
    android:background="@drawable/border">

    <TextView
        style="@style/DialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_text"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/script_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:gravity="center"
        android:text="@string/script_button"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:textStyle="bold"
        android:text="@string/close_button"/>

</LinearLayout>