<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/default_margin"
    android:background="@drawable/border">

    <!-- Dialog Title -->
    <TextView
        style="@style/DialogTitle"
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="@string/camera_dialog_title"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        android:layout_margin="@dimen/half_margin"
        android:background="@color/colorAccent"/>

    <!-- Manufacturer Name -->
    <TextView
        style="@style/DialogHeader"
        android:id="@+id/manu_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/manu_header"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/manu_edit"
        app:layout_constraintEnd_toEndOf="@id/manu_edit"
        app:layout_constraintTop_toTopOf="@id/manu_edit"
        app:layout_constraintBottom_toBottomOf="@id/manu_edit"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/border"/>
    <AutoCompleteTextView
        android:id="@+id/manu_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manu_header"
        android:padding="@dimen/double_padding"
        android:textSize="@dimen/dialog_font_size"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/film_manu"
        android:autofillHints="@string/film_manu"
        android:textColorHint="@color/light_red"
        android:background="@android:color/transparent"/>

    <!-- Camera name -->
    <TextView
        style="@style/DialogHeader"
        android:id="@+id/camera_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manu_edit"
        android:text="@string/camera_header"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_header"
        app:layout_constraintBottom_toBottomOf="@id/camera_edit"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/border"/>
    <AutoCompleteTextView
        android:id="@+id/camera_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_header"
        android:padding="@dimen/double_padding"
        android:textSize="@dimen/dialog_font_size"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/camera_name"
        android:autofillHints="@string/camera_name"
        android:textColorHint="@color/light_red"
        android:background="@android:color/transparent"/>

    <!-- Format Selecton -->
    <TextView
        style="@style/DialogHeader"
        android:id="@+id/format_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_edit"
        android:text="@string/format_header"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/format_radio"
        app:layout_constraintEnd_toEndOf="@id/format_radio"
        app:layout_constraintTop_toTopOf="@id/format_radio"
        app:layout_constraintBottom_toBottomOf="@id/format_radio"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/border"/>

    <RadioGroup
        android:id="@+id/format_radio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/double_padding"
        android:paddingStart="@dimen/double_padding"
        android:paddingEnd="@dimen/double_padding"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/format_header">
        <RadioButton
            style="@style/DialogHeader"
            android:id="@+id/format_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_35mm"/>
        <RadioButton
            style="@style/DialogHeader"
            android:id="@+id/format_120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_120mm"/>
        <RadioButton
            style="@style/DialogHeader"
            android:id="@+id/format_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_other"/>
    </RadioGroup>

    <!-- Lens -->
    <TextView
        style="@style/DialogHeader"
        android:id="@+id/lens_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/format_radio"
        android:text="@string/lens_selection"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/lens_spinner"
        app:layout_constraintEnd_toEndOf="@id/lens_spinner"
        app:layout_constraintTop_toTopOf="@id/lens_spinner"
        app:layout_constraintBottom_toBottomOf="@id/lens_spinner"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/border"/>
    <Spinner
        style="@style/SpinnerStyle"
        android:id="@+id/lens_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lens_header"
        tools:listitem="@layout/item_spinner"/>
    <TextView
        android:id="@+id/lens_spinner_mask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/lens_spinner"
        app:layout_constraintEnd_toEndOf="@id/lens_spinner"
        app:layout_constraintTop_toTopOf="@id/lens_spinner"
        app:layout_constraintBottom_toBottomOf="@id/lens_spinner"
        android:visibility="invisible"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dialog_font_size"
        tools:text="@string/spinner_text_example"/>
    <TextView
        style="@style/DialogHeader"
        android:id="@+id/fixed_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/fixed_checkbox"
        app:layout_constraintTop_toBottomOf="@id/lens_spinner"
        android:text="@string/fixed_lens" />
    <CheckBox
        android:id="@+id/fixed_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fixed_check_text"
        app:layout_constraintBottom_toBottomOf="@id/fixed_check_text"/>

    <!-- Notes -->
    <TextView
        android:id="@+id/notes_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fixed_checkbox"
        android:paddingStart="@dimen/double_padding"
        android:paddingEnd="@dimen/double_padding"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dialog_font_size"
        android:text="@string/notes_header"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/notes_edit"
        app:layout_constraintEnd_toEndOf="@id/notes_edit"
        app:layout_constraintTop_toTopOf="@id/notes_edit"
        app:layout_constraintBottom_toBottomOf="@id/notes_edit"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/border"/>
    <EditText
        android:id="@+id/notes_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_header"
        android:padding="@dimen/double_padding"
        android:textSize="@dimen/dialog_font_size"
        android:inputType="textCapSentences"
        android:hint="@string/frame_notes_hint"
        android:autofillHints="@string/frame_notes_hint"
        android:background="@android:color/transparent"/>

    <!-- Action Buttons -->
    <!-- OK Button -->
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/notes_edit"
        android:textSize="@dimen/dialog_font_size"
        android:textStyle="bold"
        android:text="@string/save_button"/>
    <!-- Clear Button -->
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/save_button"
        android:textSize="@dimen/dialog_font_size"
        android:textStyle="bold"
        android:text="@string/cancel_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>