<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:background="@drawable/border">
        <EditText
            android:id="@+id/export_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/export_filename"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border">
            <Spinner
                android:id="@+id/export_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="7dp"
                android:background="@color/white"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@id/export_method"
                android:src="@drawable/drop"
                android:contentDescription="@string/spinner_drop"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center|bottom">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/export_dialog_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border"
            android:textColor="@color/dark_grey"
            android:text="@string/export_button"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/cancel_dialog_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border"
            android:textColor="@color/dark_grey"
            android:text="@string/cancel_button"/>
    </LinearLayout>

</LinearLayout>